SUBDIRS = COMMON PLASMA FIRE EXPLOSION STARFIELD COPPERBARS CANDYBAR SINUSSCROLLER LENS SHADEBOB JUMPINGSCROLL BOBS UNLIMITEDBOBS \
	ROTOZOOM EQUALIZER CIRCLESCROLLER SINEWAVE FLIPIMAGE WATER DOOMMELT SPIRALTWIST
EXTRA_DIST = GFX/eye.png GFX/tuxblackbg.png GFX/font.pcx GFX/tile.png SOUND/MODS/tuneforit.mod 
