lib_LTLIBRARIES = libTDEC.la
libTDEC_la_SOURCES = fps.c fps.h video.c video.h utils.h utils.c layers.c layers.h c scroller.h scroller.c jumpingscroller.h jumpingscroller.c 3dstarfield.h 3dstarfield.c copperbars.h copperbars.c sinescroller.h sinescroller.c 
libTDEC_la_LDFLAGS = $(LIBLTDL) -export-dynamic
EXTRA_DIST = tdec.h
INCLUDES = $(INCLTDL)		