noinst_LIBRARIES = libOPCODE.a
libOPCODE_a_SOURCES = Opcode.cpp OPC_BVTCache.h     OPC_MemoryMacros.h     OPC_OptimizedTree.h      OPC_Ray.cpp  OPC_Triangle.h \
	OPC_Collider.cpp   OPC_Model.cpp          OPC_Plane.cpp            OPC_Ray.h                OPC_TriBoxOverlap.h \
        OPC_Collider.h     OPC_Model.h            OPC_Plane.h              OPC_RayTriOverlap.h      OPC_TriTriOverlap.h \
	OPC_Common.cpp     OPC_OBBCollider.cpp    OPC_PlanesAABBOverlap.h  OPC_Settings.h           OPC_Types.h \
	OPC_Common.h       OPC_OBBCollider.h      OPC_PlanesCollider.cpp   OPC_SphereAABBOverlap.h  OPC_VolumeCollider.cpp \
	OPC_AABBCollider.cpp  OPC_Container.cpp  OPC_OBB.cpp            OPC_PlanesCollider.h     OPC_SphereCollider.cpp   \
	OPC_VolumeCollider.h OPC_AABBCollider.h    OPC_Container.h    OPC_OBB.h	OPC_PlanesTriOverlap.h   OPC_SphereCollider.h \
	OPC_AABB.cpp          OPC_FPU.h          OPC_Point.cpp            OPC_SphereTriOverlap.h   \
	OPC_AABB.h            OPC_HPoint.h       OPC_Point.h              OPC_TreeBuilders.cpp     \
	OPC_AABBTree.cpp      OPC_Matrix3x3.cpp  OPC_Preprocessor.h       OPC_TreeBuilders.h	\
	OPC_AABBTree.h        OPC_Matrix3x3.h    Opcode.h               OPC_RayAABBOverlap.h     OPC_TreeCollider.cpp	\
	OPC_BoundingSphere.h  OPC_Matrix4x4.cpp  OPC_RayCollider.cpp      OPC_TreeCollider.h	\
	OPC_BoxBoxOverlap.h   OPC_Matrix4x4.h    OPC_OptimizedTree.cpp  OPC_RayCollider.h        OPC_Triangle.cpp	\
	Stdafx.h	Stdafx.cpp
